# motionDetector

./: .gitignore  CMakeLists.txt  README.md  main.cpp  requirements.txt
include/: message_queue.h  python_module.h  websocket_client.h
python/: calculation.py  finger.py  function.py  motion_detection.py
source/: message_queue.cpp  python_module.cpp  websocket_client.cpp
